<?xml version="1.0"?>
<package format="2">
  <name>traffic_rec</name>
  <version>0.0.0</version>
  <description>The traffic_rec package</description>
  <maintainer email="lrodr@umich.edu">Luis</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
